<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ //  Copyright (c) Microsoft Corporation.
  ~ //  All rights reserved.
  ~ //
  ~ //  This code is licensed under the MIT License.
  ~ //
  ~ //  Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ //  of this software and associated documentation files(the "Software"), to deal
  ~ //  in the Software without restriction, including without limitation the rights
  ~ //  to use, copy, modify, merge, publish, distribute, sublicense, and / or sell
  ~ //  copies of the Software, and to permit persons to whom the Software is
  ~ //  furnished to do so, subject to the following conditions :
  ~ //
  ~ //  The above copyright notice and this permission notice shall be included in
  ~ //  all copies or substantial portions of the Software.
  ~ //
  ~ //  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ //  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ //  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ //  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ //  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ //  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ //  THE SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.adal.aad.microsoft.com.userappwithbroker.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/authority_text"/>

        <Spinner
            android:id="@+id/authorityType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/other_authority_text" />

        <EditText
            android:id="@+id/other_authority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:textSize="14sp"
            android:hint="Optional"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/login_hint_text" />

        <EditText
            android:id="@+id/loginHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="8" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/promptBehavior" />

        <Spinner
            android:id="@+id/prompt_behavior"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/resource" />

        <Spinner
            android:id="@+id/data_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="ClientId" />

        <Spinner
            android:id="@+id/client_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Redirect Uri" />

        <Spinner
            android:id="@+id/redirect_uri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Use Broker" />

        <Switch
            android:id="@+id/use_broker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:checked="true"/>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_acquiretoken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acquire_token_button" />

            <Button
                android:id="@+id/btn_acquiretokensilent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acquire_token_silent_button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="Extra Query Param" />

            <EditText
                android:id="@+id/extraQP"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="8" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_output"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

</LinearLayout>